package operate

import (
	"context"
	"test/service/myrpc/proto"
)
	
// 设备注册
func DeviceReg(ctx context.Context, in *proto.DeviceRegReq) (*proto.DeviceResp, error){
	return nil,nil
}

// 设备列表
func DeviceGet(ctx context.Context, in *proto.DeviceGetReq) (*proto.DeviceGetResp, error){
	return nil,nil
}

